Rewrite into Kotlin/Native