@@ -1,5 +1,4 @@
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget
-import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
+import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinNativeTarget
 
 buildscript {
 	repositories {
@@ -11,56 +10,33 @@ buildscript {
 	}
 }
 
-apply plugin: 'org.jetbrains.kotlin.jvm'
-apply plugin: 'application'
-
-application {
-	mainClass = 'com.jakewharton.videoswatch.Main'
-	applicationDefaultJvmArgs = [
-		'--enable-preview',
-		'--enable-native-access=ALL-UNNAMED',
-	]
-	applicationDistribution.from(new File(projectDir, "src/main")) {
-		include('native/**')
-	}
-}
-
-dependencies {
-	implementation libs.clikt
-}
-
-tasks.named("distTar").configure { task ->
-	task.enabled = false
-}
-tasks.named("assemble").configure { task ->
-	task.dependsOn(tasks.named("installDist"))
-}
-
-tasks.withType(KotlinJvmCompile).configureEach { task ->
-	task.compilerOptions {
-		jvmTarget = JvmTarget.JVM_21
-		freeCompilerArgs.addAll(
-				'-progressive',
-		)
-	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += "--enable-preview"
-}
-
-java {
-	sourceSets.main.java.srcDir('src/main/headers')
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-		vendor = JvmVendorSpec.AZUL
-	}
-}
+apply plugin: 'org.jetbrains.kotlin.multiplatform'
 
 kotlin {
-	sourceSets.configureEach {
-		languageSettings.optIn("kotlin.ExperimentalStdlibApi")
-		languageSettings.optIn("kotlin.contracts.ExperimentalContracts")
+	macosArm64()
+
+	sourceSets {
+		configureEach {
+			languageSettings.optIn("kotlin.ExperimentalStdlibApi")
+			languageSettings.optIn("kotlin.contracts.ExperimentalContracts")
+			languageSettings.optIn("kotlinx.cinterop.ExperimentalForeignApi")
+		}
+
+		commonMain {
+			dependencies {
+				implementation libs.clikt
+				implementation libs.kotlinx.dateTime
+			}
+		}
+	}
+
+	targets.withType(KotlinNativeTarget).configureEach {
+		binaries.executable {
+			entryPoint = "com.jakewharton.videoswatch.main"
+		}
+		compilations.getByName("main").cinterops {
+			create("libffmpeg")
+		}
 	}
 }
 
